--- a/src/app/common/components/registration/registration.component.html
+++ b/src/app/common/components/registration/registration.component.html
@@ -56,6 +56,7 @@
             pTooltip="Email Id" formControlName="custMail" id="custMail" placeholder="email" style="width: 100%;">
           <div *ngIf="submitted && f.custMail.errors" class="invalid-feedback">
             <div *ngIf="f.custMail.errors.required">Mail Id is required</div>
+            <div *ngIf="f.custMail.errors.email">Mail Id is invalid</div>
           </div>
         </div>
       </td>
