--- a/src/app/common/components/restore-password/restore-password.component.html
+++ b/src/app/common/components/restore-password/restore-password.component.html
@@ -1,13 +1,5 @@
-<div class="success">
-  <span *ngIf="actionStatus"> An OTP has been sent to your registered mail Id.</span>
-  <span *ngIf="otpValid"> The OTP has been vaidated. Please choose a new password.</span>
-  <span *ngIf="rstPwdSuccess"> The password has been changed successfully.</span>
-</div>
-<div class="error">
-  <span *ngIf="actionFailure"> The details are invalid.</span>
-</div>
 <div *ngIf="submitReq" class="float-right">
-  <form [formGroup]="restorePwdForm" (ngSubmit)="restorePwd()">
+  <form [formGroup]="requestOTPForm" (ngSubmit)="requestOTP()">
     <table class="table table-striped table-hover" style="width: 25rem;">
       <tr>
         <td colspan="2">
@@ -17,19 +9,6 @@
               placeholder="Your User Name Please" style="width: 100%;">
             <div *ngIf="submitted && f.userName.errors" class="invalid-feedback">
               <div *ngIf="f.userName.errors.required">User Name is required</div>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <tr>
-      <tr>
-        <td colspan="2">
-          <div class="form-group">
-            <input type="text" formControlName="userId" class="form-control" pTooltip="Provide the User Id"
-              [ngClass]="{ 'is-invalid': submitted && f.userId.errors }" placeholder="Your User Id Please"
-              style="width: 100%;">
-            <div *ngIf="submitted && f.userId.errors" class="invalid-feedback">
-              <div *ngIf="f.userId.errors.required">User Id is required</div>
             </div>
           </div>
         </td>
@@ -67,7 +46,7 @@
 </div>
 
 <div *ngIf="otpSubmit" class="float-center">
-  <form [formGroup]="otpForm" (ngSubmit)="otpFormSubmit()">
+  <form [formGroup]="submitOTPForm" (ngSubmit)="otpFormSubmit()">
     <table class="table table-striped table-hover" style="width: 25rem;">
       <tr>
         <td colspan="2">
